# agno-demo

./: .env.example  .gitignore  README.md  main.py  mcp_client.py  mcp_server.py  pyproject.toml
agents/: __init__.py  async_stream.py  build_agent.py
llm/: __init__.py  llm.py  lm_studio.py  model.py  openai_like.py
mcp_demo/: agent.py  mcp_client.py  mcp_server.py
