[project]
name = "agno-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.2.10",
    "aiohttp>=3.13.2",
    "dotenv>=0.9.9",
    "fastapi>=0.125.0",
    "fastmcp>=2.14.1",
    "openai>=2.7.2",
    "psutil>=7.1.3",
    "uvicorn>=0.38.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
