[project]
name = "agno-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.21",
    "dotenv>=0.9.9",
    "fastmcp>=2.14.2",
    "openai>=2.14.0",
    "sqlalchemy>=2.0.45",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
